Update AutoBSPWM.sh